# tortoise-oxigraph

./: README.md  pyproject.toml
tortoise-oxigraph/: README.md  pyproject.toml
tortoise-oxigraph/tests/: test_basic.py
tortoise-oxigraph/tortoise_oxigraph/: __init__.py  client.py  executor.py  filters.py  rdf_utils.py  schema_generator.py  sparql_builder.py
